--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^20.11.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
