--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.11.5",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5"
   }
 }
